--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "Practice",
-  "version": "1.3",
-  "description": "Most beautiful timeline theme for Ghost"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dennis-Mayk/Practice.git"
-  },
-  "keywords": [
+    "name": "Practice",
+    "version": "1.3",
+    "description": "Most beautiful timeline theme for Ghost"
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Dennis-Mayk/Practice.git"
+    },
+    "keywords": [
     "ghost",
     "theme",
     "blog",
     "timeline"
   ],
-  "author": "Dennis \"Mayk",
-  "license": "MIT",
-  },
+    "author": "Dennis \"Mayk",
+    "license": "MIT",
+},
 }
