--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Practice",
     "version": "1.3",
-    "description": "Most beautiful timeline theme for Ghost"
+    "description": "Most beautiful timeline theme for Ghost",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
