--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Dennis-Mayk/Practice.git"
     },
     "keywords": [
-    "ghost",
-    "theme",
-    "blog",
-    "timeline"
-  ],
+        "ghost",
+        "theme",
+        "blog",
+        "timeline"
+    ],
     "author": "Dennis \"Mayk",
-    "license": "MIT",
-},
+    "license": "MIT"
 }
