--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "timeline"
   ],
   "author": "Dennis-Mayk",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Dennis-Mayk/Practice/issues"
   },
