--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "practice",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "Most beautiful timeline theme for Ghost",
   "repository": {
     "type": "git",
@@ -8,9 +8,12 @@
   },
   "keywords": [
     "ghost",
+    "ghost-theme",
     "timeline"
   ],
-  "author": "Dennis-Mayk",
+  "author": {
+    "email": "your@email.here"
+  },
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Dennis-Mayk/Practice/issues"
